<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014-2017 The OmniROM Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Xiaomi</string>
    <string name="advanced_settings">Advanced</string>
    <string name="category_vibrator">Vibrator</string>
    <string name="vib_strength_title_head">Strength of the vibrator</string>
    <string name="category_torch">Torch</string>
    <string name="yellow_torch_brightness_title_head">Yellow led maximum brightness</string>
    <string name="white_torch_brightness_title_head">White led maximum brightness</string>
    <string name="graphics_title">Graphics</string>
    <string name="kcal_title">Display color</string>
    <string name="kcal_summary">Display color calibration using KCAL</string>
    <string name="kcal_enabled_title">Enable KCAL</string>
    <string name="kcal_enabled_summary">Turn on display calibration using KCAL</string>
    <string name="kcal_red">Red</string>
    <string name="kcal_green">Green</string>
    <string name="kcal_blue">Blue</string>
    <string name="kcal_saturation">Saturation</string>
    <string name="kcal_contrast">Constrast</string>
    <string name="kcal_value">Value</string>
    <string name="kcal_hue">Hue</string>
    <string name="kcal_invert_title">Invert</string>
    <string name="kcal_invert_summary">Invert all screen colors</string>
    <string name="kcal_greyscale_title">Greyscale</string>
    <string name="kcal_greyscale_summary">Fully disable saturation</string>
    <string name="menu_reset">Reset</string>

    <string name="sound_title">Sound</string>
    <string name="sound_control_title">Sound control</string>
    <string name="sound_control_summary">Setup headphones, speaker and microphone gains</string>
    <string name="headphone_gain">Headphone gain</string>
    <string name="speaker_gain">Speaker gain</string>
    <string name="mic_gain">Microphone gain</string>
    <string name="mic2_gain">Increase the noise sensitivity range</string>
</resources>
