<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2014 The OmniROM Project
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.mdroid.settings.device.sound.HeadphoneGainPreference
        android:key="headphone_gain"
        android:title="@string/headphone_gain" />
    <com.mdroid.settings.device.sound.SpeakerGainPreference
        android:key="speaker_gain"
        android:title="@string/speaker_gain" />
    <com.mdroid.settings.device.sound.MicGainPreference
        android:key="mic_gain"
        android:title="@string/mic_gain" />

</PreferenceScreen>
